tests/snapshots/markdown_outputter_tests__render_code_block.snap
---
source: tests/markdown_outputter_tests.rs
expression: markdown
---
```rust
fn main() {
    println!("Hello");
}
```
