tests/snapshots/markdown_outputter_tests__render_document_with_front_page.snap
---
source: tests/markdown_outputter_tests.rs
expression: markdown
---
# Test Document

Test description

**Author:** Test Author
**Generated:** 2025-01-01T00:00:00.000000Z
**Total Articles:** 1

## Front Page Summary

This is a front page summary with important news highlights


---

## Table of Contents

- [Front Page Summary](#front-page-summary)
- [Test Feed](#test-feed)
  - [Test Article](#test-article)

---

## Test Feed

A test feed

**Total Articles:** 1

### Test Article

**Published:** 2025-01-01T00:00:00.000000Z
**Author:** Test Author
**Source:** Test Feed
**Link:** [Read original article](https://example.com/article)

Article content


---
